分享、启动APP、跳转应用市场、上拉加载更多

--- a/css/loadmore.css
+++ b/css/loadmore.css
@@ -4,8 +4,8 @@
 	padding:0 15px;
 	width:120px;
 	height:30px;
-	background-color:#E94E3D;
-	color:#fff;
+	/*background-color:#E94E3D;*/
+	color:#333;
 	line-height:30px;
 	text-align:center;
 	border-radius:5px;
