--- a/css/teamshare.css
+++ b/css/teamshare.css
@@ -80,6 +80,7 @@ section ul li {
   width: 33%;
   text-align: center;
   box-sizing: border-box;
+  font-size: 0.3rem;
 }
 section ul li p:nth-child(1) {
   font-size: 0.43rem;
@@ -124,19 +125,21 @@ button {
   line-height: 0.8rem;
   font-size: 0.36rem;
   border-radius: 8px;
+  cursor: pointer;
 }
 .links {
-  padding: 0.2rem 0.5rem;
+  padding: 0.3rem  0.5rem  0.2rem  0.5rem;
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   bottom: 0;
-  width: 100%;
-  z-index: 1;
+  box-sizing: border-box;
+  width: 6.4rem;
 }
 .links img {
   float: left;
-  width: 15%;
+  width: 16%;
   vertical-align: middle;
+  margin-top: 0.05rem;
   margin-right: 0.2rem;
 }
 .links span:nth-child(2) {
@@ -145,9 +148,9 @@ button {
 }
 .links span:nth-child(4) {
   font-size: 0.26rem;
-  color: #666;
+  color: #a1a1a1;
   line-height: 0.5rem;
-  margin-top: 0.2rem;
+  margin-top: 0.25rem;
 }
 .links span:nth-child(5) {
   font-size: 0.26rem;
@@ -158,16 +161,18 @@ button {
   background-size: 100%;
   padding: 0.15rem;
   position: absolute;
-  right: 22%;
+  right: 13%;
   top: 50%;
   transform: translateY(-50%);
   line-height: 0.5rem;
+  cursor: pointer;
 }
 .links .close {
   width: 2%;
   position: absolute;
-  top: 10%;
-  right: 15%;
+  top: 12%;
+  right: 4%;
+  cursor: pointer;
 }
 .data {
   padding: 0.5rem;
@@ -181,7 +186,7 @@ button {
   display: none;
   padding-top: 0.1rem;
   width: 100%;
-  height: 100%;
+  height: 120%;
   padding-left: 20px;
   box-sizing: border-box;
   z-index: 1000;
